--- a/ModuloPricipal/ModuloPricipal/ModuloPricipal.csproj
+++ b/ModuloPricipal/ModuloPricipal/ModuloPricipal.csproj
@@ -154,6 +154,9 @@
     <Resource Include="imagenes\Delete.png" />
     <Resource Include="imagenes\Save.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="imagenes\Logout.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
