RegistroMascota->Modulo Mascotas .-.

--- a/Modulo_Mascota/Modulo_Mascota/Modulo_Mascota.csproj
+++ b/Modulo_Mascota/Modulo_Mascota/Modulo_Mascota.csproj
@@ -65,12 +65,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BDConexion.cs" />
+    <Compile Include="Mascota.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MascotaDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -96,6 +98,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="imagenes\Mascota.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
