--- a/ModuloPricipal/ModuloPricipal/ModuloPricipal.csproj
+++ b/ModuloPricipal/ModuloPricipal/ModuloPricipal.csproj
@@ -64,9 +64,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DialogoEliminarProducto.xaml.cs">
+      <DependentUpon>DialogoEliminarProducto.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PuntoVenta.xaml.cs">
       <DependentUpon>PuntoVenta.xaml</DependentUpon>
     </Compile>
+    <Page Include="DialogoEliminarProducto.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Login.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
